# commitmsgfmt

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  bump-release
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
contrib/git/hooks/: commit-msg
contrib/vim/after/ftplugin/: gitcommit.vim
doc/: commitmsgfmt.1.adoc
src/: commitmsgfmt.rs  main.rs  parser.rs  worditer.rs
