[package]
name = "commitmsgfmt"
version = "1.5.0-GIT"
authors = ["Mikkel Kjeldsen"]
description = "Formats commit messages better than fmt(1) and Vim"
publish = false
homepage = "https://gitlab.com/mkjeldsen/commitmsgfmt"
repository = "https://gitlab.com/mkjeldsen/commitmsgfmt"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
unicode-segmentation = "1.10.1"
clap = "2.34.0"
encoding = "0.2.33"

[dev-dependencies]
pretty_assertions = "1.2.1"
rand = "0.8.5"
