[package]
name = "commitmsgfmt"
version = "1.6.0-GIT"
authors = ["Mikkel Kjeldsen"]
description = "Formats commit messages better than fmt(1) and Vim"
publish = false
homepage = "https://gitlab.com/mkjeldsen/commitmsgfmt"
repository = "https://gitlab.com/mkjeldsen/commitmsgfmt"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
unicode-segmentation = "1.10.1"
encoding = "0.2.33"

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
